Fix spacing for images within li elements

--- a/public/docs/css/main.css
+++ b/public/docs/css/main.css
@@ -2210,6 +2210,14 @@ a[data-youtube] {
   display: block;
 }
 
+.page-content {
+  li:has(figure) {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
 /* Paging */
 
 .post-paging {
